added jwt authentication

--- a/Foody/Foody.WebApi/Foody.WebApi.csproj
+++ b/Foody/Foody.WebApi/Foody.WebApi.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>4e249100-2a0d-4abb-899a-ef18533d30a3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -32,6 +33,9 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
     <ProjectReference Include="..\Foody.Entities\Foody.Entities.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\Foody.Auth\Foody.Auth.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
