--- a/Foody/Foody.WebApi/appsettings.json
+++ b/Foody/Foody.WebApi/appsettings.json
@@ -8,6 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtConfig": {
+    "Secret": "lOdWL1XXSJY2SBrzTGZsLe0VFCTiU3lmRpO8YSL6"
+  }
 }
-
