--- a/Foody/Foody.WebApi/appsettings.json
+++ b/Foody/Foody.WebApi/appsettings.json
@@ -10,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "JwtConfig": {
-    "Secret": "lOdWL1XXSJY2SBrzTGZsLe0VFCTiU3lmRpO8YSL6"
+    "Secret": ""
   }
 }
