--- a/Foody/Foody.WebApi/Foody.WebApi.csproj
+++ b/Foody/Foody.WebApi/Foody.WebApi.csproj
@@ -38,6 +38,9 @@
     <ProjectReference Include="..\Foody.Auth\Foody.Auth.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\Foody.Utilities\Foody.Utilities.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\" />
