add watchdog logger

--- a/src/Foody/Foody.WebApi/appsettings.json
+++ b/src/Foody/Foody.WebApi/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "DataSource=app.db; Cache=Shared"
+    "Default": "DataSource=app.db; Cache=Shared",
+    "foody": "Server=localhost:55000;Database=foody;",
+    "logging": "Server=localhost:55000;Database=watchdog;"
   },
   "Logging": {
     "LogLevel": {
