refactor connection string

--- a/src/Foody/Foody.WebApi/appsettings.json
+++ b/src/Foody/Foody.WebApi/appsettings.json
@@ -1,8 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "DataSource=app.db; Cache=Shared",
-    "foody": "Server=localhost:55000;Database=foody;",
-    "logging": "Server=localhost:55000;Database=watchdog;"
+    "Default": "DataSource=app.db; Cache=Shared"
   },
   "Logging": {
     "LogLevel": {
