add table view control

--- a/src/client/FoodyApp/Foody.Admin/Foody.Admin.csproj
+++ b/src/client/FoodyApp/Foody.Admin/Foody.Admin.csproj
@@ -65,6 +65,9 @@
 	  <MauiXaml Update="Pages\Category\ModifyPage.xaml">
 	    <SubType></SubType>
 	  </MauiXaml>
+	  <MauiXaml Update="Control\TableView.xaml">
+	    <SubType></SubType>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
