--- a/src/Foody/Foody.Test/Foody.Test.csproj
+++ b/src/Foody/Foody.Test/Foody.Test.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -28,12 +28,16 @@
     <None Remove="Systems\Controllers\" />
     <None Remove="Systems\AutoMapper\" />
     <None Remove="Fixtures\" />
+    <None Remove="Helpers\" />
+    <None Remove="Systems\Repositories\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Systems\" />
     <Folder Include="Systems\Controllers\" />
     <Folder Include="Systems\AutoMapper\" />
     <Folder Include="Fixtures\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="Systems\Repositories\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Foody.WebApi\Foody.WebApi.csproj" />
