--- a/src/Foody/Foody.Data/Foody.Data.csproj
+++ b/src/Foody/Foody.Data/Foody.Data.csproj
@@ -20,6 +20,7 @@
     <None Remove="Services\" />
     <None Remove="Microsoft.Extensions.Caching.StackExchangeRedis" />
     <None Remove="StackExchange.Redis" />
+    <None Remove="MailKit" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
@@ -38,6 +39,7 @@
     <PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.9" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
+    <PackageReference Include="MailKit" Version="3.4.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Foody.Entities\Foody.Entities.csproj" />
