add contact page

--- a/src/client/FoodyApp/Foody.Admin/Foody.Admin.csproj
+++ b/src/client/FoodyApp/Foody.Admin/Foody.Admin.csproj
@@ -68,6 +68,9 @@
 	  <MauiXaml Update="Control\TableView.xaml">
 	    <SubType></SubType>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\Contact\ContactPage.xaml">
+	    <SubType></SubType>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
